Command Overflow Fixes, Spacer Module Updated

--- a/css/frag/layout.less
+++ b/css/frag/layout.less
@@ -554,7 +554,7 @@ header {
    .no-select();
 
    &:active, &:focus {
-        cursor:url("../img/cursorAdd.gif"), auto;
+        
    }
 
 }
